--- a/scss/pages/_about.scss
+++ b/scss/pages/_about.scss
@@ -107,7 +107,6 @@
             li {
               height: 45px;
               margin-bottom: 45px;
-              display: block;
             }
           }
         }
@@ -115,17 +114,10 @@
     }
 
     .flip8 {
-      -webkit-animation-name: flip8;
-      -webkit-animation-duration: 20s;
-      -webkit-animation-transition-timing-function: cubic-bezier(0.23, 1, 0.32, 1.2);
-      -webkit-animation-iteration-count: infinite;
-      animation-name: flip8;
-      animation-duration: 20s;
-      animation-transition-timing-function: cubic-bezier(0.23, 1, 0.32, 1.2);
-      animation-iteration-count: infinite;
+      animation: flip8 20s cubic-bezier(0.23, 1, 0.32, 1.2) infinite;
     }
 
-    @-webkit-keyframes flip8 {
+    @keyframes flip8 {
       0% { margin-top: -720px; }
       6.25% { margin-top: -630px; }
       12.5% { margin-top: -630px; }
